--- a/src/web/calorie-bank/app/views/main.scala.html
+++ b/src/web/calorie-bank/app/views/main.scala.html
@@ -13,6 +13,31 @@
         <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script> 
         <script type="text/javascript" src="@routes.Assets.at("javascripts/gauge.js")"></script> 
 
+        <style>
+
+		body {
+		font: 10px sans-serif;
+		}
+
+		.axis path,
+		.axis line {
+		fill: none;
+		stroke: #000;
+		shape-rendering: crispEdges;
+		}
+
+		.x.axis path {
+		display: none;
+		}
+
+		.line {
+		fill: none;
+		stroke: steelblue;
+		stroke-width: 1.5px;
+		}
+
+		</style>
+
         <script>				
 			var gauges = [];
 			
@@ -64,25 +89,132 @@
 				createGauges();
 				setInterval(updateGauges, 5000);
 			}
+
+			// D3 plot shenanigans
+
+			var margin = {top: 20, right: 80, bottom: 30, left: 50},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var parseDate = d3.time.format("%Y%m%d").parse;
+
+var x = d3.time.scale()
+    .range([0, width]);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var color = d3.scale.category10();
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
+
+var line = d3.svg.line()
+    .interpolate("basis")
+    .x(function(d) { return x(d.date); })
+    .y(function(d) { return y(d.temperature); });
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.tsv(@routes.Assets.at("data.tsv"), function(error, data) {
+  color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
+
+  data.forEach(function(d) {
+    d.date = parseDate(d.date);
+  });
+
+  var cities = color.domain().map(function(name) {
+    return {
+      name: name,
+      values: data.map(function(d) {
+        return {date: d.date, temperature: +d[name]};
+      })
+    };
+  });
+
+  x.domain(d3.extent(data, function(d) { return d.date; }));
+
+  y.domain([
+    d3.min(cities, function(c) { return d3.min(c.values, function(v) { return v.temperature; }); }),
+    d3.max(cities, function(c) { return d3.max(c.values, function(v) { return v.temperature; }); })
+  ]);
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("Temperature (ºF)");
+
+  var city = svg.selectAll(".city")
+      .data(cities)
+    .enter().append("g")
+      .attr("class", "city");
+
+  city.append("path")
+      .attr("class", "line")
+      .attr("d", function(d) { return line(d.values); })
+      .style("stroke", function(d) { return color(d.name); });
+
+  city.append("text")
+      .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
+      .attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.temperature) + ")"; })
+      .attr("x", 3)
+      .attr("dy", ".35em")
+      .text(function(d) { return d.name; });
+});
 		</script>
 
     </head>
 
     <body onload="initialize()">
-		
-		<div class="jumbotron">
-			<h1 style="text-align:center;">CALORIE BANK</h1>
-		</div>
 
-		<div class="well well-lg" style="text-align:center;">
-			<span id="networkGaugeContainer"></span>
-			<span id="testGaugeContainer"></span>
-		</div>
+    	<div class="container">
+			<div class="row">
+				<div class="col-md-6"> <!-- left -->
+					<span id="networkGaugeContainer"></span>	
+				</div>
+				<div class="col-md-6"> <!-- right -->
+					<span id="networkGaugeContainer"></span>
+				</div>	
+			</div>
 
-		<!-- FOOTER -->
-		<footer style="text-align:center;">
-			<p>&copy; Calorie Bank by <a target="_blank" href="http://www.christopher-wood.com">Christopher Wood</a></p>
-		</footer>
+			<!-- stats/directive break -->
+			</hr>
+
+			<!-- TODO: integrate angular and use it to control the markup here -->
+			<div class="jumbotron">
+				<h1 style="text-align:center;">Pick your treat!</h1>
+				<h1 style="text-align:center;">PICTURE</h1>
+			</div>
+
+			<div class="jumbotron">
+				<h1 style="text-align:center;">Get it from here!</h1>
+				<h1 style="text-align:center;">MAP</h1>
+			</div>
+
+			<!-- FOOTER -->
+			<footer style="text-align:center;">
+				<p>&copy; Calorie Bank by <a target="_blank" href="http://www.christopher-wood.com">Christopher Wood</a></p>
+			</footer>
+		</div>
 
 	    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     	<script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
