--- a/src/web/calorie-bank/app/views/main.scala.html
+++ b/src/web/calorie-bank/app/views/main.scala.html
@@ -125,7 +125,8 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.tsv(@routes.Assets.at("data.tsv"), function(error, data) {
+d3.tsv("@routes.Assets.at("data.tsv")", function(error, data) {
+	console.log(data);
   color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
 
   data.forEach(function(d) {
