--- a/src/web/calorie-bank/app/views/main.scala.html
+++ b/src/web/calorie-bank/app/views/main.scala.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app>
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
@@ -10,8 +10,42 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/carousel.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-        <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script> 
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/d3.v3.min.js")"></script> 
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/angular.min.js")"></script> 
         <script type="text/javascript" src="@routes.Assets.at("javascripts/gauge.js")"></script> 
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/calorie.js")"></script> 
+
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<style type="text/css">
+		  html { height: 100% }
+		  body { height: 100%; margin: 10px; padding: 10px }
+		  #map-canvas { height: 100% }
+		  #panel {
+	        position: relative;
+	        top: 5px;
+	        left: 50%;
+	        margin-left: -180px;
+	        z-index: 5;
+	        background-color: #fff;
+	        padding: 5px;
+	        border: 1px solid #999;
+	      }
+		</style>
+		<script type="text/javascript"
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAi-lt4ht-4058cP1fjn0WcNeH6ofQ3Vs&sensor=false">
+		</script>
+		<script type="text/javascript">
+		  function initialize() {
+		    var mapOptions = {
+		      center: new google.maps.LatLng(-34.397, 150.644),
+		      zoom: 8,
+		      mapTypeId: google.maps.MapTypeId.ROADMAP
+		    };
+		    var map = new google.maps.Map(document.getElementById("map-canvas"),
+		        mapOptions);
+		  }
+		  google.maps.event.addDomListener(window, 'load', initialize);
+		</script>
 
         <style>
 
@@ -190,10 +224,39 @@ d3.tsv("@routes.Assets.at("data.tsv")", function(error, data) {
     	<div class="container">
 			<div class="row">
 				<div class="col-md-6"> <!-- left -->
-					<span id="networkGaugeContainer"></span>	
+					<div id="main" ng-app ng-controller="CalorieBankController" ng-click="hideTooltip()">
+						<!-- This is the tooltip. It is shown only when the showtooltip variable is truthful -->
+						<div class="tooltip" ng-click="$event.stopPropagation()" ng-show="showtooltip">
+
+							<!-- ng-model binds the contents of the text field with the "value" model.
+							 Any changes to the text field will automatically update the value, and
+							 all other bindings on the page that depend on it.  -->
+							<input type="text" ng-model="value" />
+						</div>
+
+						<span id="networkGaugeContainer"></span>
+
+						<!-- Call a method defined in the InlineEditorController that toggles
+						 the showtooltip variable -->
+						<p ng-click="toggleTooltip($event)">{{value}}</p>
+					</div>
 				</div>
 				<div class="col-md-6"> <!-- right -->
-					<span id="networkGaugeContainer"></span>
+					<div id="main" ng-app ng-controller="GraphController" ng-click="hideTooltip()">
+						<!-- This is the tooltip. It is shown only when the showtooltip variable is truthful -->
+						<div class="tooltip" ng-click="$event.stopPropagation()" ng-show="showtooltip">
+
+							<!-- ng-model binds the contents of the text field with the "value" model.
+							 Any changes to the text field will automatically update the value, and
+							 all other bindings on the page that depend on it.  -->
+							<input type="text" ng-model="value" />
+						</div>
+
+						<!-- Call a method defined in the InlineEditorController that toggles
+						 the showtooltip variable -->
+						<p ng-click="toggleTooltip($event)">{{value}}</p>
+
+					</div>
 				</div>	
 			</div>
 
@@ -204,11 +267,82 @@ d3.tsv("@routes.Assets.at("data.tsv")", function(error, data) {
 			<div class="jumbotron">
 				<h1 style="text-align:center;">Pick your treat!</h1>
 				<h1 style="text-align:center;">PICTURE</h1>
+				<div id="main" ng-app ng-controller="FoodController" ng-click="hideTooltip()">
+					<!-- This is the tooltip. It is shown only when the showtooltip variable is truthful -->
+					<div class="tooltip" ng-click="$event.stopPropagation()" ng-show="showtooltip">
+
+						<!-- ng-model binds the contents of the text field with the "value" model.
+						 Any changes to the text field will automatically update the value, and
+						 all other bindings on the page that depend on it.  -->
+						<input type="text" ng-model="value" />
+					</div>
+
+					<!-- Call a method defined in the InlineEditorController that toggles
+					 the showtooltip variable -->
+					<p ng-click="toggleTooltip($event)">{{value}}</p>
+
+				</div>
 			</div>
 
 			<div class="jumbotron">
 				<h1 style="text-align:center;">Get it from here!</h1>
-				<h1 style="text-align:center;">MAP</h1>
+				<div id="main" ng-app ng-controller="MapController" ng-click="hideTooltip()">
+					<!-- This is the tooltip. It is shown only when the showtooltip variable is truthful -->
+					<div class="tooltip" ng-click="$event.stopPropagation()" ng-show="showtooltip">
+
+						<!-- ng-model binds the contents of the text field with the "value" model.
+						 Any changes to the text field will automatically update the value, and
+						 all other bindings on the page that depend on it.  -->
+						<input type="text" ng-model="value" />
+					</div>
+
+					<!-- Call a method defined in the InlineEditorController that toggles
+					 the showtooltip variable -->
+					<p ng-click="toggleTooltip($event)">{{value}}</p>
+
+					<div id="panel">
+						<input onclick="clearMarkers();" type=button value="Hide Markers">
+						<input onclick="showMarkers();" type=button value="Show All Markers">
+						<input onclick="deleteMarkers();" type=button value="Delete Markers">
+
+						<br/>
+
+						<b>Start: </b>
+						<select id="start" onchange="calcRoute();">
+						<option value="chicago, il">Chicago</option>
+						<option value="st louis, mo">St Louis</option>
+						<option value="joplin, mo">Joplin, MO</option>
+						<option value="oklahoma city, ok">Oklahoma City</option>
+						<option value="amarillo, tx">Amarillo</option>
+						<option value="gallup, nm">Gallup, NM</option>
+						<option value="flagstaff, az">Flagstaff, AZ</option>
+						<option value="winona, az">Winona</option>
+						<option value="kingman, az">Kingman</option>
+						<option value="barstow, ca">Barstow</option>
+						<option value="san bernardino, ca">San Bernardino</option>
+						<option value="los angeles, ca">Los Angeles</option>
+						</select>
+						<b>End: </b>
+						<select id="end" onchange="calcRoute();">
+						<option value="chicago, il">Chicago</option>
+						<option value="st louis, mo">St Louis</option>
+						<option value="joplin, mo">Joplin, MO</option>
+						<option value="oklahoma city, ok">Oklahoma City</option>
+						<option value="amarillo, tx">Amarillo</option>
+						<option value="gallup, nm">Gallup, NM</option>
+						<option value="flagstaff, az">Flagstaff, AZ</option>
+						<option value="winona, az">Winona</option>
+						<option value="kingman, az">Kingman</option>
+						<option value="barstow, ca">Barstow</option>
+						<option value="san bernardino, ca">San Bernardino</option>
+						<option value="los angeles, ca">Los Angeles</option>
+						</select>
+					</div>
+
+					<!-- the map -->
+					<div id="map-canvas"/>
+
+				</div>
 			</div>
 
 			<!-- FOOTER -->
