--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,6 +19,14 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/angular.min.js")"></script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/gauge.js")"></script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/calorie.js")"></script> 
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+
+	<!-- external JS libraries -->
+	<!-- TODO: resolve these to local libraries when done -->
+	<script src="http://code.highcharts.com/highcharts.js"></script>
+	<script src="http://code.highcharts.com/modules/exporting.js"></script>
+	<script src="@routes.Assets.at("javascripts/graphs.js")" type="text/javascript"></script>
 
     <!--<script>				
 		var gauges = [];
@@ -84,19 +92,41 @@
 			</div>
 
 			<!-- top panel well -->
-			<div class="well">
+			<div class="well" ng-app="calorie-bank" ng-controller="CalorieBankController" data-ng-init="initialize()">
 				<div class="row clearfix">
 					<div class="col-md-6 column">
-						<div id="main" class="text-center" ng-app="calorie-bank" ng-controller="CalorieBankController" data-ng-init="initialize()">
+						<div id="main" class="text-center">
 							<span id="GaugeContainer"></span>
 						</div>
 					</div>
 					<div class="col-md-6 column text-center">
-
-						<!-- graph of calories/exercise goes here -->
-
-						<!-- <img alt="140x140" src="http://lorempixel.com/140/140/"> -->
+						<div id="calorie-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+						<!-- <div id="activity-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div> -->
 					</div>
+				</div>
+
+				<div class="panel-group" id="accordion">
+				  <div class="panel panel-default">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" style="text-align:center; active: false;" ng-click="expand()">
+				        	<span class="glyphicon glyphicon-arrow-down"></span>
+				          	<h4>{{expandMessage}}</h4>
+				          	<span class="glyphicon glyphicon-arrow-down"></span>
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapseOne" class="panel-collapse collapse in">
+				      <div class="panel-body">
+				      	<div id="activity-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+				      </div>
+				    </div>
+<!-- 				    <div id="collapseOne" class="panel-collapse collapse in">
+				      <div class="panel-body">
+				      	<div id="activity-graph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+				      </div>
+				    </div> -->
+				  </div>
 				</div>
 			</div>
 
@@ -110,14 +140,14 @@
 
 					<div class="row clearfix">
 						<div class="col-md-6 column">
-							<div class="list-group">
-								<div ng-repeat="treatGroup in treatGroupCollection" class="list-group-item panel-heading"><span class="pull-left badge">{{treatGroup.treats.length}}</span>
+							<div ng-repeat="treatGroup in treatGroupCollection" class="list-group" style="cursor:pointer;">
+								<div class="list-group-item panel-heading "><span class="pull-left badge">{{treatGroup.treats.length}}</span>
 									<h4 class="list-group-item-heading">
 										{{treatGroup.groupName}}
 									</h4>
-									<div ng-repeat="treat in treatGroup.treats" class="list-group-item data-collapse" ng-click="renderTreat(treat)">
-										{{treat.name}} - {{treat.calories}}
-									</div>
+								</div>
+								<div class="list-group-item active" ng-repeat="treat in treatGroup.treats" ng-click="renderTreat(treat)">
+									{{treat.name}} - {{treat.calories}}
 								</div>
 							</div>
 						</div>
@@ -128,6 +158,8 @@
 				</div>
 			</div>
 			</hr>
+
+<!-- 			ng-class="{active: treatItemHover}" ng-mouseenter="treatItemHover = true" ng-mouseleave="treatItemHover = false" -->
 
 			<!-- location well -->
 			<div class="well">
@@ -150,8 +182,5 @@
 	</div>
 </div>
 </body>
-
-<script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-<script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
 
 </html>
