Pushing in UI updates.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -110,9 +110,11 @@
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" style="text-align:center; active: false;" ng-click="expand()">
-				        	<span class="glyphicon glyphicon-arrow-down"></span>
-				          	<h4>{{expandMessage}}</h4>
-				          	<span class="glyphicon glyphicon-arrow-down"></span>
+				        	<h4>
+				        		<span class="glyphicon glyphicon-arrow-down"></span>
+				          		{{expandMessage}}
+				          		<span class="glyphicon glyphicon-arrow-down"></span>
+				          	</h4>
 				        </a>
 				      </h4>
 				    </div>
